--- a/index.html.html
+++ b/index.html.html
@@ -37,7 +37,11 @@
       // ...
 
 
-      // ...
+      $("#random-button").on("click", function() {
+        var randomNumber = Math.floor(Math.random()*100);
+        $("#random-number").html(randomNumber);
+
+      });
 
     });
 
